# FA-system

./: .gitignore  README.md  compose.yaml  dockerfile  pyproject.toml
src/: config.py
src/api/: main.py
src/api/routes/: analyse.py  asset.py  user.py
src/core/: asset.py
src/database/: connection.py  schema.py
src/pipeline/: model.py  pipeline.py
